[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/laser/cannon.png" type="Texture" id=1]
[ext_resource path="res://audio/hum3.mp3" type="AudioStream" id=2]
[ext_resource path="res://audio/fire.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/laser/laser.png" type="Texture" id=4]
[ext_resource path="res://scripts/laser.gd" type="Script" id=5]
[ext_resource path="res://scenes/flame.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 38.1767

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 9, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, -98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.94934, 276.276 )

[sub_resource type="Animation" id=4]
resource_name = "laser"
length = 0.15
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("body/beam/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "laser_start"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("body/beam/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="laser" type="Node2D"]
z_index = 5
script = ExtResource( 5 )
Fire = ExtResource( 6 )

[node name="body" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2( -0.628481, 6.48611 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="body"]
modulate = Color( 1.5, 1.5, 1.3, 1 )
position = Vector2( -0.156738, -4.82263 )
scale = Vector2( 0.25, 0.25 )
z_index = 6
texture = ExtResource( 1 )

[node name="beam" type="Area2D" parent="body" groups=[
"beam",
]]
modulate = Color( 1.5, 1.5, 1.5, 1 )
collision_layer = 3
collision_mask = 3

[node name="Sprite" type="Sprite" parent="body/beam"]
modulate = Color( 1, 1, 1, 0.768627 )
position = Vector2( -0.341003, -325.245 )
scale = Vector2( 1, 36.1321 )
z_index = 5
texture = ExtResource( 4 )
hframes = 3
vframes = 3
frame = 4

[node name="Particles2D" type="Particles2D" parent="body/beam/Sprite"]
modulate = Color( 0.956863, 0.772549, 0.458824, 1 )
position = Vector2( 0, 6.601 )
amount = 12
lifetime = 0.6
process_material = SubResource( 2 )

[node name="hum" type="AudioStreamPlayer2D" parent="body/beam/Sprite" groups=[
"sound",
]]
position = Vector2( 0, 2.41526 )
stream = ExtResource( 2 )
volume_db = 3.105
bus = "1"

[node name="fire" type="AudioStreamPlayer2D" parent="body/beam/Sprite" groups=[
"sound",
]]
position = Vector2( -84.81, 2.29619 )
stream = ExtResource( 3 )
volume_db = 1.515
pitch_scale = 0.9
bus = "1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/beam"]
position = Vector2( -0.634946, -289.548 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/laser = SubResource( 4 )
anims/laser_start = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="body/beam" to="." method="_on_beam_area_entered"]
[connection signal="body_entered" from="body/beam" to="." method="_on_beam_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
